Added a basic test implementation using the latest htsjdk
This uses htsjdk 2.23.0 but currently hardcodes the reference path.

It fails for the test case because of versioning issues.

Refers to #54

--- a/.classpath
+++ b/.classpath
@@ -3,7 +3,8 @@
 	<classpathentry kind="src" path=""/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="jbzip2-0.9.jar"/>
-	<classpathentry kind="lib" path="sam-1.103.jar"/>
 	<classpathentry kind="lib" path="cisd-jhdf5.jar"/>
+	<classpathentry kind="lib" path="htsjdk.jar"/>
+	<classpathentry kind="lib" path="commons-compress.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
