--- a/.classpath
+++ b/.classpath
@@ -1,9 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path=""/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="lib" path="jbzip2-0.9.jar"/>
-	<classpathentry kind="lib" path="sam-1.103.jar"/>
 	<classpathentry kind="lib" path="cisd-jhdf5.jar"/>
+	<classpathentry kind="lib" path="htsjdk.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
