--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -10,5 +10,5 @@
 			"installAnt": "true"
 		}
 	},
-	"postCreateCommand": "java -version && ant -version"
+	"postCreateCommand": "sudo apt-get update && sudo apt-get install -y libfreetype6 fonts-liberation fontconfig && java -version && ant -version"
 }
