--- a/.classpath
+++ b/.classpath
@@ -9,5 +9,13 @@
 	<classpathentry kind="lib" path="jbzip2-0.9.jar"/>
 	<classpathentry kind="lib" path="cisd-jhdf5.jar"/>
 	<classpathentry kind="lib" path="htsjdk.jar"/>
+	<classpathentry kind="lib" path="lib/junit-jupiter-api-5.10.0.jar"/>
+	<classpathentry kind="lib" path="lib/junit-jupiter-engine-5.10.0.jar"/>
+	<classpathentry kind="lib" path="lib/junit-jupiter-params-5.10.0.jar"/>
+	<classpathentry kind="lib" path="lib/junit-platform-launcher-1.10.0.jar"/>
+	<classpathentry kind="lib" path="lib/junit-platform-engine-1.10.0.jar"/>
+	<classpathentry kind="lib" path="lib/junit-platform-commons-1.10.0.jar"/>
+	<classpathentry kind="lib" path="lib/opentest4j-1.3.0.jar"/>
+	<classpathentry kind="lib" path="lib/apiguardian-api-1.1.2.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
