--- a/build.xml
+++ b/build.xml
@@ -15,6 +15,13 @@
         <pathelement location="sam-1.103.jar"/>
         <pathelement location="cisd-jhdf5.jar"/>
         <pathelement location="htsjdk.jar"/>
+        <!-- Include any third-party libs placed in lib/ -->
+        <fileset dir="lib" includes="**/*.jar" erroronmissingdir="false" />
+    </path>
+    <path id="test.classpath">
+        <!-- Reuse main classpath and add test output dir -->
+        <path refid="FastQC.classpath" />
+        <pathelement location="test/bin" />
     </path>
     <target name="init">
         <mkdir dir="bin"/>
@@ -22,11 +29,21 @@
             <fileset dir=".">
                 <exclude name="**/*.launch"/>
                 <exclude name="**/*.java"/>
+                <exclude name=".git/**"/>
+                <exclude name=".devcontainer/**"/>
+                <exclude name=".vscode/**"/>
+                <exclude name=".settings/**"/>
+                <exclude name=".project"/>
+                <exclude name="lib/**"/>
+                <exclude name="build.xml"/>
             </fileset>
         </copy>
     </target>
     <target name="clean">
         <delete dir="bin"/>
+        <delete dir="test/bin"/>
+        <delete dir="test/reports"/>
+        <delete dir="test/integration/output"/>
     </target>
     <target depends="clean" name="cleanall"/>
     <target depends="build-subprojects,build-project" name="build"/>
@@ -56,5 +73,33 @@
         <java classname="uk.ac.babraham.FastQC.FastQCApplication" failonerror="true" fork="yes">
             <classpath refid="FastQC.classpath"/>
         </java>
+    </target>
+    
+    <!-- ===== JUnit 5 targets ===== -->
+    <target name="init-test">
+        <mkdir dir="test/bin"/>
+        <mkdir dir="test/reports"/>
+    </target>
+    
+    <target name="compile-tests" depends="build,init-test">
+        <javac debug="true" debuglevel="${debuglevel}" destdir="test/bin" includeantruntime="false" source="${source}" target="${target}">
+            <src path="test"/>
+            <classpath refid="test.classpath"/>
+        </javac>
+    </target>
+
+    <target name="test" depends="compile-tests">
+        <echo message="Running JUnit 5 tests..."/>
+        <junitlauncher haltOnFailure="true" printSummary="true">
+            <classpath refid="test.classpath"/>
+            <testclasses outputdir="test/reports">
+                <fileset dir="test/bin">
+                    <include name="**/*Test.class"/>
+                    <include name="**/Test*.class"/>
+                </fileset>
+                <listener type="legacy-xml" sendSysOut="true" sendSysErr="true"/>
+                <listener type="legacy-plain" sendSysOut="true"/>
+            </testclasses>
+        </junitlauncher>
     </target>
 </project>
