--- a/.classpath
+++ b/.classpath
@@ -17,6 +17,7 @@
 	<classpathentry kind="lib" path="lib/junit-platform-engine-1.10.0.jar"/>
 	<classpathentry kind="lib" path="lib/junit-platform-commons-1.10.0.jar"/>
 	<classpathentry kind="lib" path="lib/opentest4j-1.3.0.jar"/>
-	<classpathentry kind="lib" path="lib/apiguardian-api-1.1.2.jar"/>
+	<classpathentry kind="lib" path="lib/apiguardian-api-1.1.2.jar"/>	
+	<classpathentry kind="lib" path="lib/jsoup-1.18.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
