--- a/build.xml
+++ b/build.xml
@@ -88,17 +88,32 @@
         </javac>
     </target>
 
-    <target name="test" depends="compile-tests">
-        <echo message="Running JUnit 5 tests..."/>
+    <target name="unit-test" depends="compile-tests">
+        <echo message="Running unit tests..." />
         <junitlauncher haltOnFailure="true" printSummary="true">
-            <classpath refid="test.classpath"/>
+            <classpath refid="test.classpath" />
             <testclasses outputdir="test/reports">
                 <fileset dir="test/bin">
-                    <include name="**/*Test.class"/>
-                    <include name="**/Test*.class"/>
+                    <include name="**/unit/*Test.class" />
+                    <include name="**/unit/Test*.class" />
                 </fileset>
-                <listener type="legacy-xml" sendSysOut="true" sendSysErr="true"/>
-                <listener type="legacy-plain" sendSysOut="true"/>
+                <listener type="legacy-xml" sendSysOut="true" sendSysErr="true" />
+                <listener type="legacy-plain" sendSysOut="true" />
+            </testclasses>
+        </junitlauncher>
+    </target>
+
+    <target name="integration-test" depends="compile-tests">
+        <echo message="Running integration tests..." />
+        <junitlauncher haltOnFailure="true" printSummary="true">
+            <classpath refid="test.classpath" />
+            <testclasses outputdir="test/reports">
+                <fileset dir="test/bin">
+                    <include name="**/integration/*Test.class" />
+                    <include name="**/integration/Test*.class" />
+                </fileset>
+                <listener type="legacy-xml" sendSysOut="true" sendSysErr="true" />
+                <listener type="legacy-plain" sendSysOut="true" />
             </testclasses>
         </junitlauncher>
     </target>
