--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -9,8 +9,14 @@ on:
       - master # Run on pull requests targeting the master branch
   workflow_dispatch: # Allow manual triggering of the workflow
 
+# Cancel existing executions when new commits are pushed onto the branch
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 permissions:
   contents: read
+  checks: write
 
 jobs:
   run-tests:
@@ -24,12 +30,31 @@ jobs:
         uses: actions/setup-java@v5
         with:
           distribution: temurin
-          java-version: '11'
+          java-version: "11"
 
       - name: Test with Ant
         run: |
           java --version
           ant -version
-          ant clean build \
+          ant \
+            clean \
+            build \
             unit-test \
             integration-test
+
+      - name: Upload test reports
+        uses: mikepenz/action-junit-report@v5
+        if: always()
+        with:
+          report_paths: 'test/reports/TEST-*.xml'
+          include_passed: true
+          detailed_summary: true
+          check_title_template: '{{SUITE_NAME}} | {{TEST_NAME}}'
+
+      - name: Upload received approval files
+        uses: actions/upload-artifact@v4
+        if: always()
+        with:
+          name: received-approval-files
+          path: test/**/*.received.*
+          retention-days: 30
